<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="AutoGym">
        <menu>
            <item
                android:textSize="50sp"
                android:id="@+id/itm_principal"
                android:icon="@drawable/ic_home"
                android:title="@string/app_name"></item>
        </menu>
    </item>

    <item android:title="">
        <menu>

            <item
                android:textSize="50sp"
                android:id="@+id/itm_maquinas"
                android:icon="@drawable/ic_maquinas"
                android:title="@string/maquina"></item>

            <item
                android:textSize="50sp"
                android:id="@+id/itm_ejercicio"
                android:icon="@drawable/ic_pesa"
                android:title="@string/ejercicio"></item>

        </menu>
    </item>

    <item android:title="">
        <menu>

            <item
                android:textSize="50sp"
                android:id="@+id/itm_acercaDe"
                android:icon="@drawable/ic_info"
                android:title="@string/acercaDe"></item>

        </menu>
    </item>

</menu>