<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_inicio"
    tools:context=".Fragments.LoginActivity"
    android:layout_marginTop="20dp">

    <TextView
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/iniciarSesion"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_icon"
        android:drawablePadding="20dp"
        android:hint="@string/correo"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:ignore="InvalidId" />

    <EditText
        android:id="@+id/contrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/correo"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_info"
        android:drawablePadding="20dp"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/iniciarAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/contrasena"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/primary"
        android:onClick="@string/iniciarSesion"
        android:text="@string/iniciarSesionAdmin" />

    <TextView
        android:id="@+id/noSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iniciarAdmin"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/noSesion"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/others"
        android:layout_above="@id/redes"
        android:text="@string/sesionUsuario"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/redes"
        android:layout_alignParentBottom="true"
        android:gravity="center">


        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/fb"/>
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/google"/>

    </LinearLayout>


</RelativeLayout>